# icfpc2023

./: .gitignore  README.md  rust-toolchain.toml
.github/workflows/: batch.yml  optimizer.yml  sovler-build.yml  webapp-build.yml
problems/: list.txt  problem-16.json  problem-20.json  problem-21.json  problem-24.json  problem-26.json  problem-27.json  problem-29.json  problem-30.json  problem-35.json  problem-36.json  problem-39.json  problem-4.json  problem-41.json  problem-44.json  problem-5.json  problem-6.json  problem-9.json
script/: download_problems.sh  eval_batch.sh
solver/: Cargo.toml  Makefile  README.md  run_fuji.sh
solver/src/: garasubo_util.rs  lib.rs  main.rs  problem.rs  solver_util.rs  wasm_util.rs
solver/testdata/: sample-full-output.json  sample-input-with-pillars.json  sample-input.json  sample-output.json  sample-small-full-input.json  solution-1.json  solution-29.json  solution-80.json
tools/: download_or_update_problems.sh  eval_batch.sh  nobishiro_batch.sh  run_optimizer.sh  run_optimizer2.sh  submit.sh  summarize_result.sh  update_score.sh
webapp/: Makefile  README.md  package-lock.json  package.json  vite.config.ts
webapp/fastapi/: .gitignore  Dockerfile  Makefile  cloudbuild.yaml  main.py  requirements.txt  run-local.sh
webapp/streamlit/: Dockerfile  Makefile  api.py  app.py  cloudbuild.yaml  genimg.py  requirements.txt
webapp/streamlit/.streamlit/: config.toml
webapp/streamlit/lab/: gen_tsne.py
webapp/streamlit/pages/: problems.py  sample.py  viz.py
webapp/streamlit/resource/problems/: problem-11.json  problem-13.json  problem-14.json  problem-15.json  problem-18.json  problem-2.json  problem-22.json  problem-23.json  problem-28.json  problem-33.json  problem-37.json  problem-38.json  problem-40.json  problem-42.json  problem-43.json  problem-45.json  problem-8.json
webapp/streamlit/static/: nobishiro.csv
webapp/svelte/: .prettierignore  .prettierrc  Dockerfile  Makefile  README.md  cloudbuild.yaml  package-lock.json  package.json  svelte.config.js  vite.config.ts
webapp/svelte/src/lib/: Log.svelte  fetchUtil.ts
webapp/wasm-sample/: Cargo.toml
(+4 files in other folders)
