[package]
name = "solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
rand = "0.8.5"
rayon = "1.7.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
anyhow = "1.0.44"

[[bin]]
name = "sample"
path = "src/bin/sample.rs"

[[bin]]
name = "random"
path = "src/bin/random.rs"
