[package]
name = "solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sample"
path = "src/bin/sample.rs"

[[bin]]
name = "evaluator"
path = "src/bin/evaluator.rs"

[[bin]]
name = "random"
path = "src/bin/random.rs"

[[bin]]
name = "random2"
path = "src/bin/random2.rs"


[[bin]]
name = "random_exact"
path = "src/bin/random_exact.rs"

[dependencies]
rayon = "1.7.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
anyhow = "1.0.71"
geo = "0.25.1"
ordered-float = "3.7.0"
pathfinding = "4.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.87"
wasm-bindgen-rayon = "1.0"
wee_alloc = "0.4.5"
serde-wasm-bindgen = "0.5.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.3.10", features = ["derive"] }
rand = "0.8.5"
rand_pcg = "0.3.1"
